Javadoc fix